Annotate models with their API list view
- It will make sense, trust me

--- a/InvenTree/company/templates/company/supplier_part_pricing.html
+++ b/InvenTree/company/templates/company/supplier_part_pricing.html
@@ -39,7 +39,7 @@ $('#price-break-table').inventreeTable({
     queryParams: {
         part: {{ part.id }},
     },
-    url: "{% url 'api-part-supplier-price' %}",
+    url: "{% url 'api-part-supplier-price-list' %}",
     onPostBody: function() {
         var table = $('#price-break-table');
 
