--- a/InvenTree/templates/modals.html
+++ b/InvenTree/templates/modals.html
@@ -7,7 +7,7 @@
 
 </div>
 
-<div class='modal fade modal-fixed-footer modal-primary' tabindex='-1' role='dialog' id='modal-form'>
+<div class='modal fade modal-fixed-footer modal-primary' role='dialog' id='modal-form'>
     <div class='modal-dialog'>
         <div class='modal-content'>
             <div class="modal-header">
@@ -33,7 +33,7 @@
     </div>
 </div>
 
-<div class='modal fade modal-fixed-footer modal-secondary' tabindex='-1' role='dialog' id='modal-form-secondary'>
+<div class='modal fade modal-fixed-footer modal-secondary' role='dialog' id='modal-form-secondary'>
         <div class='modal-dialog'>
             <div class='modal-content'>
                 <div class="modal-header">
@@ -59,7 +59,7 @@
     </div>
 
 
-<div class='modal fade modal-fixed-footer' tabindex='-1' role='dialog' id='modal-question-dialog'>
+<div class='modal fade modal-fixed-footer' role='dialog' id='modal-question-dialog'>
         <div class='modal-dialog'>
             <div class='modal-content'>
                 <div class="modal-header">
@@ -79,7 +79,7 @@
         </div>
     </div>
 
-<div class='modal fade modal-fixed-footer' tabindex='-1' role='dialog' id='modal-alert-dialog'>
+<div class='modal fade modal-fixed-footer' role='dialog' id='modal-alert-dialog'>
     <div class='modal-dialog'>
         <div class='modal-content'>
             <div class="modal-header">
