--- a/InvenTree/templates/base.html
+++ b/InvenTree/templates/base.html
@@ -150,6 +150,7 @@
 <!-- translated -->
 <script type='text/javascript' src="{% i18n_static 'api.js' %}"></script>
 <script type='text/javascript' src="{% i18n_static 'forms.js' %}"></script>
+<script type='text/javascript' src="{% i18n_static 'model_renderers.js' %}"></script>
 <script type='text/javascript' src="{% i18n_static 'barcode.js' %}"></script>
 <script type='text/javascript' src="{% i18n_static 'bom.js' %}"></script>
 <script type='text/javascript' src="{% i18n_static 'company.js' %}"></script>
