Include 'default' value in OPTIONS request for any fields with specified default values

--- a/InvenTree/company/templates/company/index.html
+++ b/InvenTree/company/templates/company/index.html
@@ -15,10 +15,13 @@
 
 {% if pagetype == 'manufacturers' and roles.purchase_order.add or pagetype == 'suppliers' and roles.purchase_order.add or pagetype == 'customers' and roles.sales_order.add %}
 <div id='button-toolbar'>
+    <button type='button' class="btn btn-success" id='new-company'>
+        <span class='fas fa-plus-circle'></span> {{ button_text }} (Server Side)
+    </button>
+    <button type='button' class="btn btn-success" id='new-company-2'>
+        <span class='fas fa-plus-circle'></span> {{ button_text }} (Client Side)
+    </button>
     <div class='btn-group'>
-        <button type='button' class="btn btn-success" id='new-company'>
-            <span class='fas fa-plus-circle'></span> {{ button_text }}
-        </button>
     </div>
 </div>
 {% endif %}
@@ -33,6 +36,22 @@
         launchModalForm("{{ create_url }}", {
             follow: true
         });
+    });
+
+    $('#new-company-2').click(function() {
+        constructForm(
+            '{% url "api-company-list" %}',
+            {
+                method: 'POST',
+                fields: [
+                    'name',
+                    'description',
+                    'is_supplier',
+                    'is_manufacturer',
+                    'is_customer',
+                ]
+            }
+        );
     });
 
     loadCompanyTable("#company-table", "{% url 'api-company-list' %}",
