Load default values into rendered form

--- a/InvenTree/company/templates/company/index.html
+++ b/InvenTree/company/templates/company/index.html
@@ -46,6 +46,11 @@
                 fields: [
                     'name',
                     'description',
+                    'website',
+                    'address',
+                    'phone',
+                    'email',
+                    'contact',
                     'is_supplier',
                     'is_manufacturer',
                     'is_customer',
