sorting price-breaks on start

--- a/InvenTree/part/templates/part/prices.html
+++ b/InvenTree/part/templates/part/prices.html
@@ -189,7 +189,8 @@
                     </button>
                 </div>
                 
-                <table class='table table-striped table-condensed' id='internal-price-break-table' data-toolbar='#internal-price-break-toolbar'>
+                <table class='table table-striped table-condensed' id='internal-price-break-table' data-toolbar='#internal-price-break-toolbar'
+                 data-sort-name="quantity" data-sort-order="asc">
                 </table>
             </div>
         </div></div>
@@ -240,7 +241,8 @@
                     </button>
                 </div>
                 
-                <table class='table table-striped table-condensed' id='price-break-table' data-toolbar='#price-break-toolbar'>
+                <table class='table table-striped table-condensed' id='price-break-table' data-toolbar='#price-break-toolbar'
+                data-sort-name="quantity" data-sort-order="asc">
                 </table>
             </div>
         </div></div>
