--- a/InvenTree/InvenTree/static/css/inventree.css
+++ b/InvenTree/InvenTree/static/css/inventree.css
@@ -965,9 +965,16 @@ input[type="date"].form-control, input[type="time"].form-control, input[type="da
 .row.full-height {
     display: flex;
     flex-wrap: wrap;
-  }
+}
 
 .row.full-height > [class*='col-'] {
     display: flex;
     flex-direction: column;
-  }
+}
+
+a.anchor {
+    display: block;
+    position: relative;
+    top: -60px;
+    visibility: hidden;
+}
