added sale price history

--- a/InvenTree/part/templates/part/prices.html
+++ b/InvenTree/part/templates/part/prices.html
@@ -281,7 +281,15 @@
         </div>
         
         <div class='panel-content'>
-            PLACEHOLDER FOR SALE HISTORY
+            {% if sale_history|length > 0 %}
+                <div style="max-width: 99%; min-height: 300px">
+                    <canvas id="SalePriceChart"></canvas>
+                </div>
+            {% else %}
+                <div class='alert alert-danger alert-block'>
+                    {% trans 'No sale pice history available for this part.' %}
+                </div>
+            {% endif %}
         </div>
     </div>
 {% endif %}
@@ -442,6 +450,37 @@
                 linkedGraph: $('#SalePriceBreakChart'),
             },
         );
+    {% endif %}
+
+    // Sale price history
+    {% if sale_history %}
+            var salepricedata = {
+                    labels: [
+                        {% for line in sale_history %}'{{ line.date }}',{% endfor %}
+                    ],
+                    datasets: [{
+                        label: '{% blocktrans %}Unit Price - {{currency}}{% endblocktrans %}',
+                        backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                        borderColor: 'rgb(255, 99, 132)',
+                        yAxisID: 'y',
+                        data: [
+                            {% for line in sale_history %}{{ line.price|stringformat:".2f" }},{% endfor %}
+                        ],
+                        borderWidth: 1,
+                    },
+                    {
+                        label: '{% trans "Quantity" %}',
+                        backgroundColor: 'rgba(255, 206, 86, 0.2)',
+                        borderColor: 'rgb(255, 206, 86)',
+                        yAxisID: 'y1',
+                        data: [
+                            {% for line in sale_history %}{{ line.qty|stringformat:"f" }},{% endfor %}
+                        ],
+                        borderWidth: 1,
+                        type: 'bar',
+                    }]
+                }
+            var SalePriceChart = loadSellPricingChart($('#SalePriceChart'), salepricedata)
     {% endif %}
 
 {% endblock %}
