Extract "limit_choices_to" options for relatedfields
- Specify as 'filters' for 'related field' type
- Extremely handy to be able to filter AJAX requests in a DRY manner!

--- a/InvenTree/company/templates/company/index.html
+++ b/InvenTree/company/templates/company/index.html
@@ -45,6 +45,12 @@
                 method: 'POST',
                 title: '{% trans "Edit Part Details" %}',
                 fields: {
+                    part: {
+                        filters: {
+                        }
+                    },
+                    quantity: {},
+                    /*
                     name: {
                         onEdit: function() {
                             console.log('Edited name field');
@@ -67,7 +73,6 @@
                     purchaseable: {},
                     salable: {},
                     component: {},
-                    /*
                     'website',
                     'address',
                     'phone',
