Display field prefix element in form

--- a/InvenTree/company/templates/company/index.html
+++ b/InvenTree/company/templates/company/index.html
@@ -45,6 +45,10 @@
                 method: 'POST',
                 title: '{% trans "Edit Part Details" %}',
                 fields: {
+                    title: {
+                        prefix: `<span class='fas fa-user'></span>`
+                    },
+                    reference: {},
                     part: {
                         filters: {
                         }
