--- a/InvenTree/InvenTree/static/css/inventree.css
+++ b/InvenTree/InvenTree/static/css/inventree.css
@@ -980,3 +980,7 @@ input[type="date"].form-control, input[type="time"].form-control, input[type="da
     border-radius: 4px;
     margin-right: 10px;
 }
+
+.select2-selection {
+    overflow-y: clip;
+}
