Replace CompanyCreate and CompanyEdit forms with AJAX form
- Adds the ability to specify an "icon" for each field

--- a/InvenTree/company/templates/company/company_base.html
+++ b/InvenTree/company/templates/company/company_base.html
@@ -111,11 +111,7 @@
     });
 
     $('#company-edit').click(function() {
-        launchModalForm(
-            "{% url 'company-edit' company.id %}",
-            {
-                reload: true
-            });
+        editCompany({{ company.id }});
     });
 
     $("#company-order-2").click(function() {
