--- a/InvenTree/company/templates/company/index.html
+++ b/InvenTree/company/templates/company/index.html
@@ -32,49 +32,16 @@
 
     $('#new-company').click(function() {
 
+        var fields = companyFormFields();
+
+        // Field overrides
+        fields.is_supplier.value = {% if pagetype == 'suppliers' %}true{% else %}false{% endif %};
+        fields.is_manufacturer.value = {% if pagetype == 'manufacturers' %}true{% else %}false{% endif %};
+        fields.is_customer.value = {% if pagetype == 'customers' %}true{% else %}false{% endif %};
+
         createCompany({
-            fields: {
-                is_supplier: {
-                    value: {% if pagetype == 'suppliers' %}true{% else %}false{% endif %},
-                },
-                is_manufacturer: {
-                    value: {% if pagetype == 'manufacturers' %}true{% else %}false{% endif %},
-                },
-                is_customer: {
-                    value: {% if pagetype == 'customers' %}true{% else %}false{% endif %},
-                },
-            }
+            fields: fields,
         });
-
-        return;
-
-        constructForm(
-            '{% url "api-company-list" %}',
-            {
-                method: 'POST',
-                title: '{% trans "Create new Company" %}',
-                follow: true,
-                fields: {
-                    name: {},
-                    description: {},
-                    website: {},
-                    address: {},
-                    currency: {},
-                    phone: {},
-                    email: {},
-                    contact: {},
-                    is_supplier: {
-                        value: {% if pagetype == 'suppliers' %}true{% else %}false{% endif %},
-                    },
-                    is_manufacturer: {
-                        value: {% if pagetype == 'manufacturers' %}true{% else %}false{% endif %},
-                    },
-                    is_customer: {
-                        value: {% if pagetype == 'customers' %}true{% else %}false{% endif %},
-                    },
-                }
-            }
-        );
     });
 
     loadCompanyTable("#company-table", "{% url 'api-company-list' %}",
