Delete CompanyCreate AJAX view

--- a/InvenTree/part/templates/part/manufacturer.html
+++ b/InvenTree/part/templates/part/manufacturer.html
@@ -51,7 +51,7 @@
                         field: 'manufacturer',
                         label: '{% trans "New Manufacturer" %}',
                         title: '{% trans "Create new manufacturer" %}',
-                        url: "{% url 'manufacturer-create' %}",
+                        // url: "{% url 'manufacturer-create' %}",
                     }
                 ]
             });
