--- a/InvenTree/company/templates/company/detail_manufacturer_part.html
+++ b/InvenTree/company/templates/company/detail_manufacturer_part.html
@@ -71,7 +71,7 @@
                         field: 'manufacturer',
                         label: '{% trans "New Manufacturer" %}',
                         title: '{% trans "Create new Manufacturer" %}',
-                        url: "{% url 'manufacturer-create' %}",
+                        //url: "{% url 'manufacturer-create' %}",
                     },
                 ]
             });
