--- a/InvenTree/company/templates/company/detail_supplier_part.html
+++ b/InvenTree/company/templates/company/detail_supplier_part.html
@@ -71,7 +71,7 @@
                         field: 'supplier',
                         label: "{% trans 'New Supplier' %}",
                         title: "{% trans 'Create new Supplier' %}",
-                        url: "{% url 'supplier-create' %}",
+                        // url: "{% url 'supplier-create' %}",
                     },
                 ]
             });
