--- a/InvenTree/company/templates/company/manufacturer_part_suppliers.html
+++ b/InvenTree/company/templates/company/manufacturer_part_suppliers.html
@@ -81,7 +81,7 @@ $('#supplier-create').click(function () {
                     field: 'supplier',
                     label: '{% trans "New Supplier" %}',
                     title: '{% trans "Create new supplier" %}',
-                    url: "{% url 'supplier-create' %}"
+                    // url: "{% url 'supplier-create' %}"
                 },
             ]
         });
