--- a/InvenTree/order/templates/order/purchase_orders.html
+++ b/InvenTree/order/templates/order/purchase_orders.html
@@ -184,7 +184,7 @@ $("#po-create").click(function() {
                     field: 'supplier',
                     label: '{% trans "New Supplier" %}',
                     title: '{% trans "Create new Supplier" %}',
-                    url: '{% url "supplier-create" %}',
+                    // url: '{% url "supplier-create" %}',
                 }
             ]
         }
