--- a/InvenTree/order/templates/order/sales_orders.html
+++ b/InvenTree/order/templates/order/sales_orders.html
@@ -186,7 +186,7 @@ $("#so-create").click(function() {
                     field: 'customer',
                     label: '{% trans "New Customer" %}',
                     title: '{% trans "Create new Customer" %}',
-                    url: '{% url "customer-create" %}',
+                    // url: '{% url "customer-create" %}',
                 }
             ]
         }
