--- a/InvenTree/company/templates/company/company_base.html
+++ b/InvenTree/company/templates/company/company_base.html
@@ -157,10 +157,22 @@
     {% endif %}
 
     $("#company-image-upload").click(function() {
-        launchModalForm(
-            "{% url 'company-image' company.id %}",
+
+        constructForm(
+            '{% url "api-company-detail" company.pk %}',
             {
-                reload: true
+                method: 'PATCH',
+                fields: {
+                    image: {},
+                },
+                title: '{% trans "Upload Image" %}',
+                onSuccess: function(data) {
+                    if (data.image) {
+                        $('#company-image').attr('src', data.image);
+                    } else {
+                        location.reload();
+                    }
+                }
             }
         );
     });
