--- a/InvenTree/part/templates/part/category.html
+++ b/InvenTree/part/templates/part/category.html
@@ -275,7 +275,9 @@
                 fields: {
                     name: {},
                     description: {},
-                    parent: {},
+                    parent: {
+                        help_text: '{% trans "Select parent category" %}',
+                    },
                     default_location: {},
                     default_keywords: {
                         icon: 'fa-key',
